# energy-mlops-ws

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile.backend  Dockerfile.ui  compose.yaml
docs/: TECHNICAL_OVERVIEW.md  WORKSHOP_GUIDE.md
k8s/: backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  kustomization.yaml  namespace.yaml  ui-deployment.yaml  ui-service.yaml
models/: iso_forest.joblib
scripts/: dev.py  kind_redeploy.sh  load.py  setup_kind_metrics.sh  sz.py
src/backend/: api.py  app.py  main.py  model.py  sim.py
src/ui/: main.py  sim_local.py
