[project]
name            = "energy-mlops-ws"
version         = "0.1.0"
description     = "MLOps Workshop for Energy Sector"
readme          = "README.md"
authors         = [
    {name = "Tomas Kozak", email = "tomas.kozak@sympulse.cz"},
]
requires-python = ">=3.12"

dependencies = [
  "python-dotenv==1.0.0",
  "structlog>=24.4.0",
  "colorama>=0.4.6",
  "aiofiles>=23.2.1",
  "requests>=2.32.4",
  "pydantic>=2.11.4",
  "streamlit>=1.49.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "click>=8.1.7",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "ruff>=0.1.14",
  "isort>=6.0.1",
  "tabulate>=0.9.0"
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.mypy]
warn_unused_configs = true
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.black]
line-length    = 88
target-version = ["py312"]

[tool.isort]
profile            = "black"
line_length        = 88
known_first_party  = ["src"]
src_paths          = ["."]

[tool.ruff]
exclude = [
  ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
  ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype",
  ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build",
  "buck-out", "build", "dist", "node_modules", "site-packages", "venv"
]

line-length     = 88
indent-width    = 4
target-version  = "py312"

[tool.ruff.lint]
select  = ["E4", "E7", "E9", "F"]
ignore  = []
fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style                   = "double"
indent-style                  = "space"
skip-magic-trailing-comma     = false
line-ending                   = "auto"
docstring-code-format         = false
docstring-code-line-length    = "dynamic"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["scratch", "prompts"]
